[ YC-000 ] 3.4.0 RC review
- exposed rank (priority parameter) on PGs and fixed sorting including priority in JAM
- changed active/disabled icons in tables to make it less confusing
- dual lists (assigned/unassigned) ui improvements, now styled to better see boundaries of each box and individual options, including additional details for convenience
- changed icons for link/unlinking major shareable objects to shop (catalog, carriers, fulfilment centres etc)
- tidies up domain interfaces (added Rankable and Nameable)
- fixed displaying of localised name for selected language
- fixed localised names of currencies
- improved view for fulfilment centres (see config in main view)
- standardised sorting of various linked entity lists (carriers, centres, shops etc)
- reduced size of linked lists in table views
- added cache evictions when warehouse object is saved/removed